// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c1 {
  fill: #72af5d;
  -webkit-animation-delay: 0;
  animation-delay: 0;
}

.c2 {
  fill: #17a3a5;
  -webkit-animation-delay: 0.1s;
  animation-delay: 0.1s;
}

.c3 {
  fill: #ebc764;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
}

.c0 {
  position: relative;
  display: block;
  width: 32px;
  height: 32px;
}

<svg
  className="c0"
>
  <polygon
    className="sc-AxjAm c1"
    color="#72af5d"
    points="0,0 0,16 16,16"
  />
  <polygon
    className="sc-AxjAm c2"
    color="#17a3a5"
    points="0,16 0,32 16,32"
  />
  <polygon
    className="sc-AxjAm c3"
    color="#ebc764"
    points="16,0 16,32 32,16"
  />
</svg>
`;

exports[`it works animated 1`] = `
.c1 {
  fill: #72af5d;
  -webkit-animation: dTTrEC;
  animation: dTTrEC;
  -webkit-animation-duration: 0.8s;
  animation-duration: 0.8s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-delay: 0;
  animation-delay: 0;
}

.c2 {
  fill: #17a3a5;
  -webkit-animation: fOlPOW;
  animation: fOlPOW;
  -webkit-animation-duration: 0.8s;
  animation-duration: 0.8s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-delay: 0.1s;
  animation-delay: 0.1s;
}

.c3 {
  fill: #ebc764;
  -webkit-animation: kJzVPa;
  animation: kJzVPa;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-duration: 0.4s;
  animation-duration: 0.4s;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
}

.c0 {
  position: relative;
  display: block;
  width: 32px;
  height: 32px;
}

<svg
  className="c0"
>
  <polygon
    className="sc-AxjAm c1"
    color="#72af5d"
    points="0,0 0,16 16,16"
  />
  <polygon
    className="sc-AxjAm c2"
    color="#17a3a5"
    points="0,16 0,32 16,32"
  />
  <polygon
    className="sc-AxjAm c3"
    color="#ebc764"
    points="16,0 16,32 32,16"
  />
</svg>
`;

exports[`it works thinking 1`] = `
.c1 {
  fill: #72af5d;
  -webkit-animation: hzFDkX;
  animation: hzFDkX;
  -webkit-animation-duration: 0.8s;
  animation-duration: 0.8s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0;
  animation-delay: 0;
}

.c2 {
  fill: #17a3a5;
  -webkit-animation: hzFDkX;
  animation: hzFDkX;
  -webkit-animation-duration: 0.8s;
  animation-duration: 0.8s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0.1s;
  animation-delay: 0.1s;
}

.c3 {
  fill: #ebc764;
  -webkit-animation: hzFDkX;
  animation: hzFDkX;
  -webkit-animation-duration: 0.8s;
  animation-duration: 0.8s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
}

.c0 {
  position: relative;
  display: block;
  width: 32px;
  height: 32px;
}

<svg
  className="c0"
>
  <polygon
    className="sc-AxjAm c1"
    color="#72af5d"
    points="0,0 0,16 16,16"
  />
  <polygon
    className="sc-AxjAm c2"
    color="#17a3a5"
    points="0,16 0,32 16,32"
  />
  <polygon
    className="sc-AxjAm c3"
    color="#ebc764"
    points="16,0 16,32 32,16"
  />
</svg>
`;

exports[`it works with different colours 1`] = `
.c1 {
  fill: #fff;
  -webkit-animation-delay: 0;
  animation-delay: 0;
}

.c2 {
  fill: #fff;
  -webkit-animation-delay: 0.1s;
  animation-delay: 0.1s;
}

.c3 {
  fill: #fff;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
}

.c0 {
  position: relative;
  display: block;
  width: 32px;
  height: 32px;
}

<svg
  className="c0"
>
  <polygon
    className="sc-AxjAm c1"
    color="#fff"
    points="0,0 0,16 16,16"
  />
  <polygon
    className="sc-AxjAm c2"
    color="#fff"
    points="0,16 0,32 16,32"
  />
  <polygon
    className="sc-AxjAm c3"
    color="#fff"
    points="16,0 16,32 32,16"
  />
</svg>
`;
